[project]
name = "google-search-mcp-server"
version = "0.1.0"
description = "An MCP server that provides Google Search API functionality for AI assistants"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio[mcp]>=5.29.0",
    "langchain-google-community>=2.0.7",
    "mcp==1.7.0",
]
